fix: card layout overflow

--- a/src/components/textbook/Card.scss
+++ b/src/components/textbook/Card.scss
@@ -16,6 +16,11 @@
   flex-direction: column;
   align-items: start;
 }
+.word__meaning-ru, .word__example-ru {
+  margin-top: 6px;
+  opacity: .7;
+  font-size: 16px;
+}
 .word__example {
   display: flex;
   flex-direction: column;
@@ -37,13 +42,15 @@
   max-width: 820px;
 }
 .word__image {
-  align-self: start;
+  align-self: center;
   width: 240px;
-  margin: 12px;
+  margin-left: 0;
+  margin-right: 24px;
 }
 
 .word__desc {
   flex-grow: 1;
+  max-width: 508px;
 }
 
 .word__word-translation {
